--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "obsidian-file-mover",
-  "name": "Obsidian File Mover",
+  "id": "taskflow",
+  "name": "Taskflow",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
   "description": "Moves files based on a frontmatter checkbox property.",
