--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "obsidian-file-mover",
+  "name": "obsidian-taskflow",
   "version": "1.0.0",
   "description": "An Obsidian plugin to move files based on a checkbox frontmatter property.",
   "main": "main.js",
